--- a/UIKitCatalog/UIKitCatalog.xcodeproj/xcshareddata/xcschemes/UIKitCatalog.xcscheme
+++ b/UIKitCatalog/UIKitCatalog.xcodeproj/xcshareddata/xcschemes/UIKitCatalog.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "291D4AD82C377A0A00FC9ECE"
+               BuildableName = "UIKitCatalogUITests.xctest"
+               BlueprintName = "UIKitCatalogUITests"
+               ReferencedContainer = "container:UIKitCatalog.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
